--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,6 @@
 
 S3method(print,xapian_match)
 S3method(print,xapian_search)
-export(xapr_index)
 export(xapr_search)
+export(xindex)
 useDynLib(xapr)
