--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Version: 0.0.1
 Authors@R: c(person("Stefan", "Widgren", role = c("aut", "cre"),
     email = "stefan.widgren@gmail.com"))
 Depends:
-    R (>= 3.0.2)
+    R (>= 3.0.2),
+    jsonlite
 License: GPL (>= 2)
 URL: https://github.com/stewid/xapr
 Type: Package
