Add S4 class xapian_database
* R/S4_classes.r: Add S4 class xapian_database to path(s) to Xapian
  databases.

* R/database.r: Add methods show and summary for a S4 class
  xapian_database.

* DESCRIPTION: Add 'S4_classes.r' and 'database.r' to Collate field.

* Update NAMESPACE

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,8 @@ Biarch: true
 NeedsCompilation: yes
 Date: 2014-09-12
 Collate:
+    'S4_classes.r'
+    'database.r'
     'index.r'
     'search.r'
     'xapr.r'
