--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,8 @@ S3method(print,xapian_match)
 S3method(print,xapian_search)
 export(xindex)
 export(xsearch)
+exportClasses(xapian_database)
+exportMethods(show)
+exportMethods(summary)
 import(jsonlite)
 useDynLib(xapr)
