--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ exportClasses(xapian_database)
 exportMethods(show)
 exportMethods(summary)
 import(jsonlite)
+import(methods)
 import(plyr)
 useDynLib(xapr)
