Change xsearch to S4 method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 S3method(print,xapian_match)
 S3method(print,xapian_search)
 export(xindex)
-export(xsearch)
 exportClasses(xapian_database)
 exportMethods(show)
 exportMethods(summary)
+exportMethods(xsearch)
 import(jsonlite)
 import(methods)
 import(plyr)
