--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Copyright: The package includes the 100 first rows of the museum catalogue
     (http://api.sciencemuseum.org.uk/documentation/collections/)
 Version: 0.0.1
 Authors@R: c(person("Stefan", "Widgren", role = c("aut", "cre"),
-    email = "stefan.widgren@gmail.com"))
+    email = "stefan.widgren@gmail.com"),
+    person("Jeroen", "Ooms", role="ctb"))
 Imports:
     plyr
 Depends:
