Add importFrom roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,6 @@ exportMethods(xsearch)
 import(jsonlite)
 import(methods)
 import(plyr)
+importFrom(stats,terms)
+importFrom(utils,edit)
 useDynLib(xapr)
