--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Authors@R: c(person("Stefan", "Widgren", role = c("aut", "cre"),
     email = "stefan.widgren@gmail.com"),
     person("Jeroen", "Ooms", role="ctb"))
 Imports:
-    plyr
+    plyr,
+    stats,
+    utils
 Depends:
     R (>= 3.0.2),
     methods,
